# Patty

./: README.md
old_src/: CMakeLists.txt  Camera.hpp  Coin.hpp  Game.cpp  Game.hpp  Input.hpp  Mesh.hpp  Model.cpp  Scene.cpp  Time.cpp  Time.hpp  mainq.cpp
old_src/shaders/: vertex.glsl
src/: CMakeLists.txt  Camera.cpp  Coin.cpp  Input.cpp  Makefile  Manager.hpp  Mesh.cpp  Model.hpp  Object.cpp  Object.hpp  Patty.hpp.in  Player.cpp  Player.hpp  Scene.hpp  main.cpp
src/scenes/: scene001.txt
src/shaders/: fragment.glsl
